feat: add img and totoro

--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
     <link rel="stylesheet" href="/css/global.css">
 </head>
 <body>
-    <h1>Home</h1>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="/pages/sobre.html">Sobre</a></li>
-            <li><a href="/pages/contato.html">Contato</a></li>
-        </ul>
-    </nav>
-</body>
+    <header class="site-header">
+        <h1 class="site-title">Meu Site</h1>
+        <nav class="main-nav">
+            <ul class="nav-list">
+                <li class="nav-item"><a href="index.html"
+                class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="./pages/sobre.html"
+                class="nav-link">Sobre</a></li>
+                <li class="nav-item"><a href="./pages/contato.html"
+                class="nav-link">contato</a></li>
+            </ul>
+        </nav>
 </html>
