add image in site

--- a/index.html
+++ b/index.html
@@ -19,4 +19,20 @@
                 class="nav-link">contato</a></li>
             </ul>
         </nav>
+        </header>
+
+        <main class="main-content">
+            <article class="article">
+                <header class="article-header">
+                    <h2 class="article-title">Bem Vindo ao Meu Site</h2>
+                    <p class="section-text">Texto Aleatório na aula de marcação Web!</p>
+                    </header>
+            </article>
+
+            <figure class="image-totoro">
+                <img src="img/totoro.png" alt="totoro"
+                class="article-image"
+                <figcaption class="image-caption">   
+                </figcaption>
+            </figure>
 </html>
