--- a/index.html
+++ b/index.html
@@ -3,36 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Semantico</title>
-    <link rel="stylesheet" href="/css/global.css">
+    <title>Home</title>
+    <link rel="stylesheet" href="css/global.css">
 </head>
 <body>
     <header class="site-header">
         <h1 class="site-title">Meu Site</h1>
         <nav class="main-nav">
             <ul class="nav-list">
-                <li class="nav-item"><a href="index.html"
-                class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="./pages/sobre.html"
-                class="nav-link">Sobre</a></li>
-                <li class="nav-item"><a href="./pages/contato.html"
-                class="nav-link">contato</a></li>
+                <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+                <li class="nav-item"> <a href="./pages/sobre.html" class="nav-link">Sobre</a></li>
+                <li class="nav-item"><a href="pages/contato.html" class="nav-link">Contato</a></li>
             </ul>
         </nav>
-        </header>
+    </header>
 
-        <main class="main-content">
-            <article class="article">
-                <header class="article-header">
-                    <h2 class="article-title">Bem Vindo ao Meu Site</h2>
-                    <p class="section-text">Texto Aleatório na aula de marcação Web!</p>
-                    </header>
-            </article>
+    <main class="main-content">
+        <article class="article">
+            <header class="article-header">
+                <h2 class="article-title">
+                    Bem Vindo ao Meu Site
+                </h2>
+                <p class="section-text">Texto aleatorio na aula de marcação web!</p>
+            </header>
+        
+        <section class="article-content">
+            <h3 class="section-title">Introdução</h3>
+            <p class="section-text">Este conteudo pe introdutorio do artigo</p>
 
-            <figure class="image-totoro">
-                <img src="img/totoro.png" alt="totoro"
-                class="article-image"
-                <figcaption class="image-caption">   
-                </figcaption>
-            </figure>
+        <figure class="image-figure">
+            <img src="img/totoro.png" alt="totoro" class="article-image">
+            <figcaption class="image-caption">Totoro</figcaption>
+        </figure>
+
+        <audio controls class="auido-player">
+            <source src="./media/audio.mp3" type="audio/mp3">Seu navegador não suporta o elemento
+            <code>audio</code>.
+        </audio>
+        </section>
+
+        <footer class="article-footer">
+            <p class="section-text">Texto de rodape do artigo</p>
+        </footer>
+        </article>
+        <aside class="sidebar">
+            <h2 class="sidebar-title">Informações adicionais</h2>
+            <p class="section-text">Texto aleatorio na aula de marcação web</p>
+        </aside>
+    </main>
+    <footer class="site-footer">
+        <address class="contact-info">
+            <p class="author-name">Autor: Vitor Sampaio</p>
+            <p class="author-email">Email:<a href="mailto:vitor.s.lira@aluno.
+                senai.br" class="email-link"> vitor.s.lira@aluno.senai.br</a></p>
+        </address>
+        <p class="copy-info">&copy; 2024 - Todos os
+            direitos reservados</p>
+    </footer>
+    
+</body>
 </html>
